HTML generation API for MS

--- a/app/package.json
+++ b/app/package.json
@@ -2,7 +2,6 @@
 	"name": "tantaman.github.io.app",
 	"version": "0.0.1",
 	"dependencies": {
-		"mocha-script": "git://github.com/tantaman/mocha-script.git#release",
-		"overload.js": "git://github.com/tantaman/overload.js.git#release"
+		"mocha-script": "git://github.com/tantaman/mocha-script.git#release"
 	}
 }
