--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
-# If you need help with YAML syntax, here are some quick references for you: 
+# If you need help with YAML syntax, here are some quick references for you:
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 #
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Tantamanlands
-email: matt dot wonlaw at gmail
+email: matthew dot wonlaw at hey.com
 description: >- # this means to ignore newlines until "baseurl:"
   Tantamanlands
 baseurl: "" # the subpath of your site, e.g. /blog
@@ -27,27 +27,89 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  tantaman
 twitter_username: tantaman
 
+author: Matt Wonlaw
+
+navbar-links:
+  About Me: "about"
+
+# Image to show in the navigation bar - works best with a square image
+# Remove this parameter if you don't want an image in the navbar
+avatar: "/assets/img/avatar-icon.png"
+
+# By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
+round-avatar: true
+
+share-links-active:
+  twitter: true
+  facebook: true
+  linkedin: true
+  vk: false
+
+social-network-links:
+  email: "matthew.wonlaw@hey.com"
+  github: tantaman
+  twitter: tantaman
+  rss: true
+
+
+navbar-col: "#43a2f8"
+navbar-text-col: "#404040"
+navbar-border-col: "#EAEAEA"
+page-col: "#68e09a"
+link-col: "#008AFF"
+hover-col: "#0085A1"
+footer-col: "#4a2310"
+footer-text-col: "#777777"
+footer-link-col: "#404040"
+
+
+# Create a "tags" index page and make tags on each post clickable
+link-tags: true
+
+# Excerpt Word Length - Truncates the excerpt to the specified number of words on the index page
+excerpt_length: 50
+
+title-separator: "-"
+
+timezone: "America/Vancouver"
+markdown: kramdown
+highlighter: rouge
+permalink: /:year-:month-:day-:title/
+paginate: 5
+
+kramdown:
+  input: GFM
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+      comments: true  # add comments to all blog posts
+      social-share: true # add social media sharing buttons to all blog posts
+      readtime: false # add estimated reading time on all blog posts
+  -
+    scope:
+      path: "" # all files
+    values:
+      layout: "page"
+      show-avatar: true
+
+exclude:
+  - CHANGELOG.md
+  - CNAME
+  - Gemfile
+  - Gemfile.lock
+  - LICENSE
+  - README.md
+  - screenshot.png
+  - docs/
+
 # Build settings
-theme: minima
+# theme: minima
 plugins:
   - jekyll-feed
-
-# Exclude from processing.
-# The following items will not be processed, by default.
-# Any item listed under the `exclude:` key here will be automatically added to
-# the internal "default list".
-#
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
+  - jekyll-paginate
+  - jekyll-sitemap
