tone down bg color

--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ social-network-links:
 navbar-col: "#43a2f8"
 navbar-text-col: "#404040"
 navbar-border-col: "#EAEAEA"
-page-col: "#68e09a"
+page-col: "#ffffff"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#4a2310"
