non round avatar

--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,7 @@ navbar-links:
 avatar: "/assets/img/avatar-icon.png"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
-round-avatar: true
+round-avatar: false
 
 share-links-active:
   twitter: true
