--- a/.obsidian/config
+++ b/.obsidian/config
@@ -27,11 +27,8 @@
         "active": true,
         "master": "",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "_posts/2020-05-20-Life-Is-Over.md",
-            "mode": "source"
-          }
+          "type": "empty",
+          "state": {}
         }
       }
     ]
