ignore node_modules

--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
   },
   "homepage": "https://github.com/tantaman/tantaman.github.io#readme",
   "dependencies": {
-    "marked": "^4.0.10"
+    "marked": "^4.0.10",
+    "next": "^12.1.0",
+    "nextra": "^1.1.0",
+    "nextra-theme-docs": "^1.2.6",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
