--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,21 @@
 {
-  // This file is not used in compilation. It is here just for a nice editor experience.
-  "extends": "@tsconfig/docusaurus/tsconfig.json",
   "compilerOptions": {
-    "baseUrl": "."
-  }
+    "moduleResolution": "node",
+    "outDir": "./build/",
+    "sourceMap": true,
+    "strictNullChecks": true,
+    "module": "esnext",
+    "jsx": "react",
+    "target": "esnext",
+    "allowJs": true,
+    "checkJs": false,
+    "importHelpers": true,
+    "baseUrl": ".",
+    "rootDir": ".",
+    "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "plugins": [{ "name": "typescript-plugin-css-modules" }]
+  },
+  "include": ["./src/"]
 }
