--- a/package.json
+++ b/package.json
@@ -1,18 +1,32 @@
 {
-  "name": "website",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {},
+  "scripts": {
+    "dev": "pnpm run server",
+    "prod": "pnpm run build && pnpm run server:prod",
+    "build": "vite build && vite build --ssr",
+    "server": "node ./server",
+    "server:prod": "cross-env NODE_ENV=production node ./server"
+  },
+  "type": "module",
   "dependencies": {
-    "@algolia/client-search": "^4.13.0",
     "@mdx-js/react": "^2.1.1",
-    "clsx": "^1.1.1",
-    "prism-react-renderer": "^1.3.1",
+    "@mdx-js/rollup": "^2.1.1",
+    "@types/compression": "^1.7.2",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.19",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@vitejs/plugin-react": "^1.2.0",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
+    "express": "^4.17.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "ts-node": "^10.5.0",
+    "typescript": "^4.5.5",
+    "vite": "^2.9.8",
+    "vite-plugin-ssr": "^0.3.64"
   },
   "devDependencies": {
-    "@types/react": "^18.0.9",
-    "typescript": "^4.6.4"
+    "rollup": "^2.72.1"
   }
 }
