--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,19 @@
 {
   "compilerOptions": {
-    "moduleResolution": "node",
-    "outDir": "./build/",
-    "sourceMap": true,
-    "strictNullChecks": true,
-    "module": "esnext",
+    "strict": true,
+    "module": "ES2020",
+    "moduleResolution": "Node",
+    "target": "ES2017",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "types": ["vite/client"],
     "jsx": "react",
-    "target": "esnext",
-    "allowJs": true,
-    "checkJs": false,
-    "importHelpers": true,
-    "baseUrl": ".",
-    "rootDir": ".",
-    "resolveJsonModule": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "plugins": [{ "name": "typescript-plugin-css-modules" }]
+    "skipLibCheck": true,
+    "esModuleInterop": true
   },
-  "include": ["./src/"]
+  "ts-node": {
+    "transpileOnly": true,
+    "compilerOptions": {
+      "module": "CommonJS"
+    }
+  }
 }
