--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "bsite": "node compiler/build.js",
-    "bfwrk": "tsc build",
+    "bfwrk": "tsc",
     "wfwrk": "tsc watch",
     "chtml": "cp src/*.html dist"
   },
@@ -13,8 +13,8 @@
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.19",
-    "@types/react": "^17.0.39",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.3",
     "esbuild": "^0.14.38",
     "mdx-bundler": "^9.0.0",
     "react": "^18",
