--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "vite build",
     "tsc": "tsc",
     "preview": "vite preview",
-    "test:unit": "vitest"
+    "test:unit": "vitest",
+    "sprod": "cd dist && serve"
   },
   "type": "module",
   "dependencies": {
