--- a/package.json
+++ b/package.json
@@ -13,22 +13,23 @@
     "@mdx-js/mdx": "^2.1.1",
     "@mdx-js/react": "^2.1.1",
     "@mdx-js/rollup": "^2.1.1",
+    "memoize-one": "^6.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "rollup": "^2.72.1",
-    "serve": "^13.0.2",
-    "typescript": "^4.5.5",
-    "vite": "^2.9.8",
-    "vitest": "^0.12.3",
-    "@vitejs/plugin-react": "^1.3.2",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.19",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.3",
+    "@vitejs/plugin-react": "^1.3.2",
     "esbuild": "^0.14.38",
-    "mdx-bundler": "^9.0.0"
+    "mdx-bundler": "^9.0.0",
+    "rollup": "^2.72.1",
+    "serve": "^13.0.2",
+    "typescript": "^4.5.5",
+    "vite": "^2.9.8",
+    "vitest": "^0.12.3"
   }
 }
