--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@vanilla-extract/vite-plugin": "^3.1.6",
     "memoize-one": "^6.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-query": "^3.39.0"
   },
   "devDependencies": {
     "@types/compression": "^1.7.2",
