--- a/package.json
+++ b/package.json
@@ -30,10 +30,19 @@
     "@vitejs/plugin-react": "^1.3.2",
     "esbuild": "^0.14.38",
     "mdx-bundler": "^9.0.0",
+    "rehype-stringify": "^9.0.3",
+    "remark-extract-frontmatter": "^3.2.0",
+    "remark-frontmatter": "^4.0.1",
+    "remark-gfm": "^3.0.1",
+    "remark-parse": "^10.0.1",
+    "remark-rehype": "^10.1.0",
+    "remark-wiki-link": "^1.0.4",
     "rollup": "^2.72.1",
     "serve": "^13.0.2",
     "typescript": "^4.5.5",
+    "unified": "^10.1.2",
     "vite": "^2.9.8",
-    "vitest": "^0.12.3"
+    "vitest": "^0.12.3",
+    "yaml": "^2.0.1"
   }
 }
