--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@vitejs/plugin-react": "^1.3.2",
     "esbuild": "^0.14.38",
     "mdx-bundler": "^9.0.0",
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-slug": "^5.0.1",
     "rehype-stringify": "^9.0.3",
     "remark-extract-frontmatter": "^3.2.0",
     "remark-frontmatter": "^4.0.1",
