--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-query": "^3.39.0"
   },
   "devDependencies": {
+    "@jsdevtools/rehype-toc": "^3.0.2",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.19",
@@ -29,8 +30,10 @@
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^1.3.2",
     "esbuild": "^0.14.38",
+    "highlight.js": "^11.5.1",
     "mdx-bundler": "^9.0.0",
     "rehype-autolink-headings": "^6.1.1",
+    "rehype-highlight": "^5.0.2",
     "rehype-slug": "^5.0.1",
     "rehype-stringify": "^9.0.3",
     "remark-extract-frontmatter": "^3.2.0",
