--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
     "mdx-bundler": "^9.0.0",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^5.0.2",
+    "rehype-infer-description-meta": "^1.0.1",
+    "rehype-infer-reading-time-meta": "^1.0.1",
+    "rehype-infer-title-meta": "^1.0.1",
+    "rehype-meta": "^3.2.1",
     "rehype-slug": "^5.0.1",
     "rehype-stringify": "^9.0.3",
     "remark-extract-frontmatter": "^3.2.0",
@@ -45,8 +49,10 @@
     "remark-wiki-link": "^1.0.4",
     "rollup": "^2.72.1",
     "serve": "^13.0.2",
+    "to-vfile": "^7.2.3",
     "typescript": "^4.5.5",
     "unified": "^10.1.2",
+    "unified-infer-git-meta": "^1.1.0",
     "vite": "^2.9.8",
     "vitest": "^0.12.3",
     "yaml": "^2.0.1"
