--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "memoize-one": "^6.0.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-query": "^3.39.0",
-    "rehype-document": "^6.0.1"
+    "react-query": "^3.39.0"
   },
   "devDependencies": {
     "@jsdevtools/rehype-toc": "^3.0.2",
@@ -28,6 +27,7 @@
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^1.3.2",
     "esbuild": "^0.14.38",
+    "hastscript": "^7.0.2",
     "highlight.js": "^11.5.1",
     "mdx-bundler": "^9.0.0",
     "rehype-autolink-headings": "^6.1.1",
