--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/rollup": "^2.1.1",
     "@vanilla-extract/css": "^1.7.0",
     "@vanilla-extract/vite-plugin": "^3.1.6",
+    "hast-util-select": "^5.0.1",
     "memoize-one": "^6.0.0",
     "react": "^18",
     "react-dom": "^18",
@@ -50,6 +51,7 @@
     "typescript": "^4.5.5",
     "unified": "^10.1.2",
     "unified-infer-git-meta": "^1.1.0",
+    "vfile-matter": "^3.0.1",
     "vite": "^2.9.8",
     "vitest": "^0.12.3",
     "yaml": "^2.0.1"
