--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^1.3.2",
     "esbuild": "^0.14.38",
+    "hast-util-to-html": "^8.0.3",
     "hastscript": "^7.0.2",
     "highlight.js": "^11.5.1",
     "mdx-bundler": "^9.0.0",
