--- a/package.json
+++ b/package.json
@@ -1,60 +1,18 @@
 {
-  "name": "tantamanlands",
-  "scripts": {
-    "build": "node compiler/build.js && tsc",
-    "twatch": "tsc --watch",
-    "tsc": "tsc",
-    "serve": "cd docs && serve"
+  "private": true,
+  "version": "0.0.0",
+  "packageManager": "pnpm@7.0.0",
+  "engines": {
+    "node": ">=17",
+    "pnpm": ">=3"
   },
-  "type": "module",
   "dependencies": {
-    "@mdx-js/react": "^2.1.1",
-    "@mdx-js/rollup": "^2.1.1",
-    "@vanilla-extract/css": "^1.7.0",
-    "@vanilla-extract/vite-plugin": "^3.1.6",
-    "hast-util-select": "^5.0.1",
-    "memoize-one": "^6.0.0",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-query": "^3.39.0"
+    "@tantaman/siteCompiler": "workspace:*"
   },
-  "devDependencies": {
-    "@jsdevtools/rehype-toc": "^3.0.2",
-    "@mdx-js/mdx": "^2.1.1",
-    "@types/compression": "^1.7.2",
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.19",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.3",
-    "@vitejs/plugin-react": "^1.3.2",
-    "esbuild": "^0.14.38",
-    "hast-util-to-html": "^8.0.3",
-    "hastscript": "^7.0.2",
-    "highlight.js": "^11.5.1",
-    "mdx-bundler": "^9.0.0",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-highlight": "^5.0.2",
-    "rehype-infer-description-meta": "^1.0.1",
-    "rehype-infer-reading-time-meta": "^1.0.1",
-    "rehype-infer-title-meta": "^1.0.1",
-    "rehype-meta": "^3.2.1",
-    "rehype-slug": "^5.0.1",
-    "rehype-stringify": "^9.0.3",
-    "remark-extract-frontmatter": "^3.2.0",
-    "remark-frontmatter": "^4.0.1",
-    "remark-gfm": "^3.0.1",
-    "remark-parse": "^10.0.1",
-    "remark-rehype": "^10.1.0",
-    "remark-wiki-link": "^1.0.4",
-    "rollup": "^2.72.1",
-    "serve": "^13.0.2",
-    "to-vfile": "^7.2.3",
-    "typescript": "^4.5.5",
-    "unified": "^10.1.2",
-    "unified-infer-git-meta": "^1.1.0",
-    "vfile-matter": "^3.0.1",
-    "vite": "^2.9.8",
-    "vitest": "^0.12.3",
-    "yaml": "^2.0.1"
+  "scripts": {
+    "build": "sitecompiler",
+    "serve": "cd docs && serve",
+    "todos": "leasot '**/*.ts' --ignore '**/node_modules'",
+    "preinstall": "npx only-allow pnpm"
   }
 }
