--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
     "strict": true,
-    "outDir": "./docs/dist",
+    "outDir": "./dist",
     "rootDir": "./src",
     "module": "ES2020",
     "moduleResolution": "Node",
     "target": "ES2017",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "jsx": "react",
+    "lib": ["ESNext"],
+    "jsx": "react-jsx",
     "skipLibCheck": true,
     "esModuleInterop": true
   },
@@ -17,5 +17,5 @@
       "module": "CommonJS"
     }
   },
-  "include": ["./src/"]
+  "include": ["./src"]
 }
