make site compiler executable from root
- included as a package in workspace root
- sitecompiler generates a "bin" script

--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -2,7 +2,11 @@
   "name": "@tantaman/sitecompiler",
   "scripts": {
     "build": "tsc",
-    "twatch": "tsc --watch"
+    "watch": "tsc --watch"
+  },
+  "main": "dist/index.js",
+  "bin": {
+    "sitecompiler": "./dist/bin/sitecompiler.js"
   },
   "type": "module",
   "dependencies": {
