--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "private": true,
   "version": "0.0.0",
   "packageManager": "pnpm@7.0.0",
+  "type": "module",
   "engines": {
     "node": ">=17",
     "pnpm": ">=3"
