use jsx for hastscript

--- a/packages/compiler/tsconfig.json
+++ b/packages/compiler/tsconfig.json
@@ -8,6 +8,7 @@
     "target": "es2017",
     "lib": ["ESNext"],
     "jsx": "react-jsx",
+    "jsxImportSource": "hastscript",
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowJs": true
