--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -10,7 +10,6 @@
   },
   "type": "module",
   "dependencies": {
-    "hast-util-select": "^5.0.1",
     "@jsdevtools/rehype-toc": "^3.0.2",
     "@mdx-js/mdx": "^2.1.1",
     "@types/compression": "^1.7.2",
@@ -20,10 +19,13 @@
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^1.3.2",
     "esbuild": "^0.14.38",
+    "hast": "^1.0.0",
+    "hast-util-select": "^5.0.1",
     "hast-util-to-html": "^8.0.3",
     "hastscript": "^7.0.2",
     "highlight.js": "^11.5.1",
     "mdx-bundler": "^9.0.0",
+    "rehype": "^12.0.1",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-highlight": "^5.0.2",
     "rehype-infer-description-meta": "^1.0.1",
@@ -44,6 +46,7 @@
     "typescript": "^4.5.5",
     "unified": "^10.1.2",
     "unified-infer-git-meta": "^1.1.0",
+    "vfile": "^5.3.2",
     "vfile-matter": "^3.0.1",
     "vite": "^2.9.8",
     "vitest": "^0.12.3",
