--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "pnpm": ">=3"
   },
   "dependencies": {
-    "@tantaman/sitecompiler": "workspace:*"
+    "@tantaman/sitecompiler": "workspace:*",
+    "rehype-parse": "^8.0.4"
   },
   "scripts": {
     "build": "sitecompiler",
