--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -19,7 +19,6 @@
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^1.3.2",
     "esbuild": "^0.14.38",
-    "hast": "^1.0.0",
     "hast-util-select": "^5.0.1",
     "hast-util-to-html": "^8.0.3",
     "hastscript": "^7.0.2",
@@ -32,6 +31,7 @@
     "rehype-infer-reading-time-meta": "^1.0.1",
     "rehype-infer-title-meta": "^1.0.1",
     "rehype-meta": "^3.2.1",
+    "rehype-parse": "^8.0.4",
     "rehype-slug": "^5.0.1",
     "rehype-stringify": "^9.0.3",
     "remark-extract-frontmatter": "^3.2.0",
