--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "scripts": {
     "build": "cd packages/compiler && pnpm build && cd ../.. && sitecompiler",
     "build:watch": "sitecompiler-watch",
+    "dev": "sitecompiler-watch",
     "serve": "cd docs && serve",
     "todos": "leasot '**/*.ts' --ignore '**/node_modules'",
     "preinstall": "npx only-allow pnpm"
