--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -51,6 +51,8 @@
     "vfile-matter": "^3.0.1",
     "vite": "^2.9.8",
     "vitest": "^0.12.3",
+    "ws": "^8.14.2",
+    "express": "^4.18.2",
     "yaml": "^2.0.1"
   }
 }
