--- a/packages/compiler/package.json
+++ b/packages/compiler/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^1.3.2",
     "esbuild": "^0.14.38",
+    "express": "^4.18.2",
     "hast-util-select": "^5.0.1",
     "hast-util-to-html": "^8.0.3",
     "hastscript": "^7.0.2",
@@ -47,12 +48,12 @@
     "typescript": "^4.5.5",
     "unified": "^10.1.2",
     "unified-infer-git-meta": "^1.1.0",
+    "unist-util-visit": "^5.0.0",
     "vfile": "^5.3.2",
     "vfile-matter": "^3.0.1",
     "vite": "^2.9.8",
     "vitest": "^0.12.3",
     "ws": "^8.14.2",
-    "express": "^4.18.2",
     "yaml": "^2.0.1"
   }
 }
