update mermaid styles for dark bg

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "unified": "^10.1.2"
   },
   "scripts": {
-    "build": "cd packages/compiler && pnpm build && cd ../.. && sitecompiler",
+    "build": "cd packages/compiler && pnpm build && cd ../frontend && pnpm build && cd ../.. && sitecompiler",
     "build:watch": "sitecompiler-watch",
     "dev": "sitecompiler-watch",
     "serve": "cd docs && serve",
