--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -5,5 +5,8 @@
     "twatch": "tsc --watch"
   },
   "type": "module",
-  "dependencies": {}
+  "devDependencies": {
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6"
+  }
 }
