--- a/publishing/mirror-room-collection/metadata.yml
+++ b/publishing/mirror-room-collection/metadata.yml
@@ -2,8 +2,5 @@ title: 'The Mirror Room Collection'
 author: 'Tantaman'
 date: 2025-08-01
 language: en-US
-subject: 'Philosophy'
-description: 'Identity and Becoming'
+subject: 'Identity and Becoming'
 rights: © 2025 Tantaman LLC. All rights reserved.
-cover-image: ../../docs/the-mirror-room/cover.png
-css: ./style.css
