--- a/publishing/mirror-room-collection/metadata.yml
+++ b/publishing/mirror-room-collection/metadata.yml
@@ -1,9 +1,14 @@
 title: 'The Mirror Room Collection'
-author: 'Tantaman'
+author: 'Matthew Wonlaw'
 date: 2025-08-01
 language: en-US
 subject: 'Identity and Becoming'
-rights: © 2025 Tantaman LLC. All rights reserved.
+rights: © 2025 Matthew Wonlaw. All rights reserved.
 header-includes: |
   \usepackage{titlesec}
   \titleformat{\subsection}{\normalfont\large\bfseries\centering}{\thesubsection}{1em}{}
+  \usepackage{etoolbox}
+  \patchcmd{\tableofcontents}{\contentsname}{\vspace*{\fill}\begin{center}\contentsname\end{center}}{}{}
+  \apptocmd{\tableofcontents}{\vspace*{\fill}\newpage}{}{}
+include-before: |
+  \newpage
